//
//  AccessibilityIdentifiers.swift
//  ImageFeed
//
//  Created by Anastasia Belyakova on 23.04.2026.
//

enum AccessibilityIdentifiers {
    static let unsplashWebView = "UnsplashWebView"
    static let likeButtonOn = "like button on"
    static let likeButtonOff = "like button off"
}
