...
                                    <constraint firstAttribute="height" constant="60" id="cdv-zV-2Yu"/>
                                </constraints>
                            </imageView>
                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Mb8-jn-CW5">
                                <rect key="frame" x="16" y="680" width="361" height="48"/>
                                <color key="backgroundColor" name="YP White (iOS)"/>
                                <accessibility key="accessibilityConfiguration" identifier="Authenticate"/>
                                <constraints>
                                    <constraint firstAttribute="height" constant="48" id="ehq-0X-POk"/>
                                </constraints>
                                <state key="normal" title="Button"/>
                                <buttonConfiguration key="configuration" style="plain" title="Войти">
                                    <fontDescription key="titleFontDescription" type="boldSystem" pointSize="17"/>
...
                                <connections>
                                    <outlet property="delegate" destination="TQF-Qy-Sad" id="hA2-CR-ye1"/>
                                </connections>
                            </scrollView>
                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="50O-AC-BPf" userLabel="Back Button">
                                <rect key="frame" x="8" y="68" width="24" height="24"/>
                                <accessibility key="accessibilityConfiguration" identifier="nav back button"/>
                                <constraints>
                                    <constraint firstAttribute="height" constant="24" id="BcQ-Ai-uav"/>
                                    <constraint firstAttribute="width" constant="24" id="JZK-4M-wDk"/>
                                </constraints>
                                <inset key="imageEdgeInsets" minX="0.0" minY="0.0" maxX="2.2250738585072014e-308" maxY="0.0"/>
                                <state key="normal" image="nav_back_button"/>
...
